# Learning_D3D12

./: .gitignore  CMakeLists.txt  Learning_D3D12.sln  Learning_D3D12.vcxproj  Learning_D3D12.vcxproj.filters  Plan.md  ReadMe.md  conanfile.py  imgui.ini  main.cpp  mox.lua  vcpkg.json
D3D/: DXContext.cpp  DXContext.h  PipelineState.h
Debug/: DebugLayer.cpp  DebugLayer.h
ImGui/backends/: imgui_impl_dx12.cpp  imgui_impl_dx12.h
Shaders/: Pipeline.hlsli  PixelShader.hlsl  RootSignature.hlsl  VertexShader.hlsl
Support/: ImageLoader.h  Shader.cpp  Shader.h  WinInclude.h  Window.cpp  Window.h
app/: imgui.ini
app/Passes/Example/: RootSignature.hlsl
app/Textures/DDS/: Normal.dds  White.dds
src/: Learning_D3D12.vcxproj  main.cpp
src/Apps/Example/: CMakeLists.txt  build.lua  main.cpp
src/Apps/Example/ImGui/: CustomImGui.cpp  CustomImGui.h
src/Apps/Example/Shaders/: LightPixelShader.hlsl  LightRootSignature.hlsl  LightVertexShader.hlsl  PBR_Pixel.hlsl  PBR_RootSignature.hlsl  PBR_Vertex.hlsl  Pipeline.hlsli  PixelShader.hlsl  RootSignature.hlsl  ShadowPass_RootSignature.hlsl  ShadowPass_Vertex.hlsl  VertexShader.hlsl  WireframePixel.hlsl  WireframeVertex.hlsl  pass.json
src/D3D/: PipelineState.cpp
src/Debug/: DebugLayer.cpp  DebugLayer.h
src/ImGui/backends/: imgui_impl_win32.h
src/Runtime/D3D12/: CMakeLists.txt  build.lua
src/Runtime/D3D12/D3D/: ColorBuffer.cpp  ColorBuffer.h  ConstantBuffer.h  ContantBuffer.cpp  DXContext.cpp  DepthBuffer.cpp  DepthBuffer.h  DepthStencil.h  DescriptorHeapAllocator.cpp  DescriptorHeapAllocator.h  FrameBuffer.h  Framebuffer.cpp  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  PipelineState.cpp  PipelineState.h  SceneObject.cpp  SceneObject.h  Texture.cpp  Texture.h  Vertex.h  ZBuffer.cpp  ZBuffer.h
src/Runtime/D3D12/Support/: AssImpUsage.cpp  AssImpUsage.h  Camera.cpp  Camera.h  DStorageUsage.cpp  DStorageUsage.h  ImageLoader.cpp  ImageLoader.h  ObjectList.cpp  ObjectList.h  Shader.cpp  Transform.cpp  Transform.h  Window.cpp  Window.h
src/Runtime/D3D12/Util/: DebugColors.h  HRException.h  LoggingProvider.cpp  LoggingProvider.h  Vertex.h  Win.h
src/Runtime/D3D12Ez/ImGui/backends/: imgui_impl_win32.cpp
src/Runtime/D3D12Ez/ImGui/freetype/: imgui_freetype.cpp  imgui_freetype.h
src/Runtime/D3D12Ez/Support/: ImageLoader.cpp  WinInclude.h
src/Runtime/D3D12Ez/Util/: EzException.cpp  EzException.h  HRException.cpp  Helper.h  LoggingProvider.cpp
src/Runtime/ImGui/: CMakeLists.txt
src/Runtime/ImGui/backends/: imgui_impl_dx12.cpp
src/Shaders/: PixelShader.hlsl  VertexShader.hlsl
src/Support/: Shader.h
